--- a/css/finalProjectCss.css
+++ b/css/finalProjectCss.css
@@ -8,7 +8,7 @@ h1{
 	color: #FFFFFF;
 }
 header{
-	background: #666666;
+	background-color: #666666;
 	text-align: center;
 	font-size: 75%;
 	padding: 15px;
