--- a/css/hw1.css
+++ b/css/hw1.css
@@ -6,7 +6,7 @@ body{
 
 header{
 	background-color: #c0c0c0;
-	background-image: url(flywheel.jpg);
+	background-image: url(css/flywheel.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
 	padding: 1%;
